# cistercian-clock

./: .cz.json  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dprint.json  eframe_template-cafba84b92fbf28211b1052e51039743c042a1f3a7052cd42553372000e386055a61bedb83d95277d292d9634fa7e67a.js  eframe_template-cafba84b92fbf28211b1052e51039743c042a1f3a7052cd42553372000e386055a61bedb83d95277d292d9634fa7e67a_bg.wasm  index.html  rust-toolchain
.github/workflows/: pages.yml  rust.yml
src/: app.rs  lib.rs  main.rs
