[package]
name = "cistercian_clock"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rondeylab.com>"]
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
chrono = "0.4.39"
eframe = { version = "0.30", default-features = false, features = ["accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow", # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
  "wayland", # To support Linux (and CI)
] }
egui = "0.30"
image = { version = "0.25.5", default-features = false, features = ["png"] }
log = "0.4.22"

# You only need serde if you want app persistence:
serde = { version = "1.0.215", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
